syntax = "proto3";

option csharp_namespace = "DADProject";

service ProjectBoneyProposerService {
	rpc CompareAndSwap(CompareAndSwapRequest) returns (CompareAndSwapReply);
    rpc FinishedCompareAndSwap(FinishedCompareAndSwapRequest) returns (FinishedCompareAndSwapReply);
}

message CompareAndSwapRequest {
	int32 slot = 1;
	int32 inValue = 2; //also assuming we can identify nodes with an integer
}

// -1 if Boney isn't the perceived leader and consensus hasn't been reached, consensus' outValue otherwise
message CompareAndSwapReply {
	int32 outValue = 1;
}

message FinishedCompareAndSwapRequest {
  int32 slot = 1;
  int32 outValue = 2; //also assuming we can identify nodes with an integer
}

message FinishedCompareAndSwapReply {
  // EMPTY
}